Fixed responsiveness, look and visibililty of search box

--- a/src/components/Navbar/index.css
+++ b/src/components/Navbar/index.css
@@ -79,10 +79,20 @@
   /* margin-left: 17vw; */
 }
 
+.search-modal {
+  background: rgba(255, 255, 255, 0);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(15px);
+  -webkit-backdrop-filter: blur(15px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
+  max-height: 700px;
+}
+
 .search-input {
   position: absolute;
-  height: 100%;
-  width: 100%;
+  height: 100% !important;
+  width: 100% !important;
   border-radius: 25px;
   background: #fff;
   border: none;
@@ -90,13 +100,13 @@
   padding-left: 20px;
   margin-top: -2px;
 }
+
 .search-icon {
   position: absolute;
   right: 0px;
   top: 0;
   width: 54px;
   background: linear-gradient(40deg, #5f85db, #daf1f7);
-  /* height: 103%; */
   height: 43px;
   text-align: center;
   line-height: 50px;
@@ -117,9 +127,7 @@
 
 .searched-user-container {
   width: 95%;
-  /* height: 60vh; */
-  height: 85%;
-  /* max-height: 90%; */
+  height: 90%;
   margin: 20px auto;
   border-radius: 5%;
   overflow-y: scroll;
@@ -144,6 +152,13 @@
   align-items: center;
   cursor: pointer;
   border-radius: 22px;
+  background-color: var(--profile-container);
+  transition: 0.3s ease-in-out;
+}
+
+.searched-user-li:hover {
+  background-color: var(--profile-container);
+  transform: scale(1.03);
 }
 
 .searched-user-avatar {
@@ -157,6 +172,7 @@
   font-size: 16px;
   cursor: default;
   color: var(--text-secondary);
+  /* color: white; */
   cursor: pointer;
 }
 
@@ -164,20 +180,23 @@
   font-size: 13px;
   cursor: default;
   color: var(--text-secondary);
+  /* color: white; */
   cursor: pointer;
 }
 
 .search-bar {
   position: relative;
   height: 45px;
-  margin: 20px auto;
+  margin: 0px auto;
   background: #fff;
   border: 1px solid #5f85db;
   border-radius: 25px;
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-top: 10px;
 }
+
 .search-closeicon {
   position: absolute;
   cursor: pointer;
@@ -185,6 +204,18 @@
   right: 10px;
   color: var(--text-grey);
 }
+
 .searchbar {
   color: var(--text-secondary);
+  /* color: white; */
+}
+
+@media only screen and (max-width: 450px) {
+  .searched-user-name {
+    font-size: 14px;
+  }
+
+  .searched-user-username {
+    font-size: 10px;
+  }
 }
